--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,10 @@ body {
     background: $very-dark-blue-main-bg;
 }
 
+p {
+    font-size: $font-size-p;
+}
+
 .nft_container {
     background: $very-dark-blue-card-bg;
     margin: 20px;
@@ -36,11 +40,25 @@ body {
             color: $cyan;
         }
     }
+
+    .nft_image:hover .img_overlay {
+        background: $cyan;
+        opacity: .1;
+        z-index: 99;
+    }
 }
 
 .nft_image {
     width: 100%;
     border-radius: 15px;
+    cursor: pointer;
+    position: relative;
+}
+
+.img_overlay {
+    position: absolute;
+    width: 375px;
+    height: 575px;
 }
 
 .content {
@@ -115,9 +133,16 @@ body {
 }
 
 .attribution { 
-    font-size: 11px; text-align: center;
+    font-size: 11px; 
+    text-align: center;
+    color: $soft-blue;
     
     a { 
-        color: hsl(228, 45%, 44%); 
+        color: $white; 
+        cursor: pointer;
+
+        &:hover {
+            color: $cyan;
+        }
     }
 }
