--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   background: #0d192b;
+  margin: 0 auto;
 }
 
 p {
@@ -51,23 +52,43 @@ p {
   color: #00fff7;
 }
 
-.container .nft_image:hover .img_overlay {
-  background: #00fff7;
-  opacity: .1;
-  z-index: 99;
-}
-
 .nft_image {
-  width: 100%;
+  width: 300px;
+  height: 300px;
   border-radius: 15px;
   cursor: pointer;
-  position: relative;
+  position: absolute;
+  top: 16%;
+  z-index: 1;
 }
 
 .img_overlay {
+  display: block;
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  cursor: pointer;
+  padding: 20px;
+  position: relative;
+  z-index: 2;
+}
+
+.img_overlay:hover {
+  background: #00fff7;
+  opacity: .5;
+}
+
+.img_overlay:hover .img_hover {
+  display: inline-block;
   position: absolute;
-  width: 375px;
-  height: 575px;
+  top: 45%;
+  left: 40%;
+}
+
+.img_hover {
+  display: none;
+  z-index: 3;
+  opacity: 1;
 }
 
 .content {
