--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,16 +52,6 @@ p {
   color: #00fff7;
 }
 
-.nft_image {
-  width: 300px;
-  height: 300px;
-  border-radius: 15px;
-  cursor: pointer;
-  position: absolute;
-  top: 16%;
-  z-index: 1;
-}
-
 .img_overlay {
   display: block;
   width: 300px;
@@ -70,12 +60,11 @@ p {
   cursor: pointer;
   padding: 20px;
   position: relative;
-  z-index: 2;
 }
 
 .img_overlay:hover {
   background: #00fff7;
-  opacity: .5;
+  opacity: .9;
 }
 
 .img_overlay:hover .img_hover {
@@ -83,12 +72,26 @@ p {
   position: absolute;
   top: 45%;
   left: 40%;
+  z-index: 3;
+}
+
+.img_overlay:hover .nft_image {
+  z-index: -1;
+  opacity: .5;
+}
+
+.nft_image {
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .img_hover {
   display: none;
-  z-index: 3;
-  opacity: 1;
 }
 
 .content {
